--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
+    "caniuse-lite": "^1.0.30001713",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -79,6 +80,10 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^6.2.6"
+  },
+  "resolutions": {
+    "vite": "^6.2.6",
+    "esbuild": "^0.25.2"
   }
 }
